@@ -22,6 +22,13 @@ JH/04 Add variables $arc_domains, $arc_oldest_pass for ARC verify.  Fix the
       report of oldest_pass in ${authres } in consequence, and separate out
       some descriptions of reasons for verification fail.
 
+JH/05 Bug 2273: Cutthrough delivery left a window where the received messsage
+      files in the spool were present and unlocked.  A queue-runner could spot
+      them, resulting in a duplicate delivery.  Fix that by doing the unlock
+      after the unlink.  Investigation by Time Stewart.  Take the opportunity to
+      add more error-checking on spoofile handling while that code is being
+      messed with.
+
 
 Exim version 4.91
 -----------------
